# ChangeLog for kde-base/konq-plugins
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/konq-plugins/ChangeLog,v 1.68 2007/05/23 00:43:00 carlo Exp $

*konq-plugins-3.5.7 (23 May 2007)

  23 May 2007; Carsten Lohrke <carlo@gentoo.org> +konq-plugins-3.5.7.ebuild:
  Version bump.

  05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
  -files/konq-plugins-3.5.2-arkplugin-crash-fix.diff:
  Remove unneeded patches.

  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
  -konq-plugins-3.5.2-r1.ebuild, -konq-plugins-3.5.6.ebuild:
  Remove old versions.

*konq-plugins-3.5.6-r1 (25 Jan 2007)
*konq-plugins-3.5.5-r1 (25 Jan 2007)

  25 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  +files/konq-plugins-3.5-archiver.patch, +konq-plugins-3.5.5-r1.ebuild,
  +konq-plugins-3.5.6-r1.ebuild:
  Add a patch to fix a privacy issue with the archiver.

*konq-plugins-3.5.6 (16 Jan 2007)

  16 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  +konq-plugins-3.5.6.ebuild:
  Bump to 3.5.6 (prerelease).

  11 Dec 2006; <kloeri@gentoo.org> konq-plugins-3.5.5.ebuild:
  Stable on ia64.

  06 Dec 2006; <kloeri@gentoo.org> konq-plugins-3.5.5.ebuild:
  Stable on Alpha.

  26 Nov 2006; Markus Rothe <corsair@gentoo.org> konq-plugins-3.5.5.ebuild:
  Stable on ppc64

  18 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  -konq-plugins-3.5.3.ebuild, -konq-plugins-3.5.4.ebuild:
  Remove old versions.

  16 Nov 2006; Joseph Jezak <josejx@gentoo.org> konq-plugins-3.5.5.ebuild:
  Marked ppc stable for bug #147570.

  14 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  konq-plugins-3.5.5.ebuild:
  Stable on sparc wrt #147570

  13 Nov 2006; Danny van Dyk <kugelfang@gentoo.org>
  konq-plugins-3.5.5.ebuild:
  Marked stable on amd64 wrt bug #147570.

  13 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  konq-plugins-3.5.5.ebuild:
  "Stable x86, bug #147570"

*konq-plugins-3.5.5 (03 Oct 2006)

  03 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>