@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/konq-plugins/konq-plugins-3.5.5-r1.ebuild,v 1.1 2007/01/25 18:37:35 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/konq-plugins/konq-plugins-3.5.5-r1.ebuild,v 1.2 2007/07/07 17:06:32 philantrop Exp $
 
 KMNAME=kdeaddons
 KMNODOCS=true
@@ -20,3 +20,6 @@ $(deprange 3.5.4 $MAXKDEVER kde-base/kdeaddons-docs-konq-plugins)"
 KMEXTRACTONLY="konq-plugins/akregator"
 
 PATCHES="${FILESDIR}/konq-plugins-3.5-archiver.patch"
+
+# Fixes bug 151107
+MAKEOPTS="${MAKEOPTS} -j1"
