@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/konq-plugins/konq-plugins-3.5.5.ebuild,v 1.8 2006/12/11 14:06:57 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/konq-plugins/konq-plugins-3.5.5.ebuild,v 1.9 2007/07/07 17:06:32 philantrop Exp $
 
 KMNAME=kdeaddons
 KMNODOCS=true
@@ -18,3 +18,6 @@ $(deprange 3.5.4 $MAXKDEVER kde-base/kdeaddons-docs-konq-plugins)"
 # Don't install the akregator plugin, since it depends on akregator, which is
 # a heavy dep.
 KMEXTRACTONLY="konq-plugins/akregator"
+
+# Fixes bug 151107
+MAKEOPTS="${MAKEOPTS} -j1"
