@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/konq-plugins
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/konq-plugins/ChangeLog,v 1.68 2007/05/23 00:43:00 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/konq-plugins/ChangeLog,v 1.69 2007/07/07 17:06:32 philantrop Exp $
+
+  07 Jul 2007; Wulf C. Krueger <philantrop@gentoo.org>
+  konq-plugins-3.5.5.ebuild, konq-plugins-3.5.5-r1.ebuild:
+  Added -j1 to MAKEOPTS. Fixes bug 151107.
 
 *konq-plugins-3.5.7 (23 May 2007)
 
